baculum: Tweak fix action column alignment

--- a/gui/baculum/themes/Baculum-v2/css/baculum.css
+++ b/gui/baculum/themes/Baculum-v2/css/baculum.css
@@ -161,7 +161,7 @@ table.dataTable tbody > tr.selected, table.dataTable tbody > tr > .selected {
 
 th.action_col, td.action_col {
 	width: 110px !important;
-	text-align: center;
+	text-align: center !important;
 }
 
 td.action_col button {
